--- a/package.json
+++ b/package.json
@@ -1,41 +1,69 @@
 {
-  "name": "stytch-pwd",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@stytch/headless-client": "^0.1.2",
-    "@stytch/react": "^0.3.3",
-    "@stytch/stytch-react": "^4.1.1",
-    "@stytch/vanilla-js": "^0.3.3",
-    "cra-template": "1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "stytch": "^5.14.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "stytch-pwd",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@stytch/headless-client": "^0.1.2",
+        "@stytch/react": "^0.3.3",
+        "@stytch/stytch-react": "^4.1.1",
+        "@stytch/vanilla-js": "^0.3.3",
+        "cra-template": "1.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.3",
+        "react-scripts": "5.0.1",
+        "react-switch": "^7.0.0",
+        "styled-components": "^5.3.6",
+        "stytch": "^5.14.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.11",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/styled-components": "^5.1.26",
+        "@vitejs/plugin-react": "^1.3.0",
+        "gh-pages": "^5.0.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.1.0",
+        "prettier": "^2.8.4",
+        "typescript": "^4.9.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json}": [
+            "prettier --write"
+        ]
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "format": "prettier --write src/**/*.{js,jsx,ts,tsx,json}",
+        "prepare": "husky install",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
