--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "stytch-pwd",
     "version": "0.1.0",
     "private": true,
-    "homepage": "http://francomoraes.github.io/stytch-authentication-react-typescript-boilerplate",
+    "homepage": ".",
     "dependencies": {
         "@stytch/headless-client": "^0.1.2",
         "@stytch/react": "^0.3.3",
